fix phone number text-decoration on iphone

--- a/styles.scss
+++ b/styles.scss
@@ -39,6 +39,7 @@ header {
     color: white;
     font-size: 5vw;
     line-height: 55px;
+    cursor: pointer;
     // text-shadow: -1px 0 #999999,0 1px #999999,1px 0 #999999,0 -1px #999999;
     // font-family: 'IM Fell French Canon SC', serif;
     font-family: 'Montserrat Subrayada', sans-serif;
@@ -49,7 +50,6 @@ header {
     }
   .digits {
     font-family: 'Mandali', sans-serif;
-    color: lightgrey;
     font-size: 4vw;
     margin: 0;
     text-shadow: none;
@@ -265,12 +265,21 @@ footer {
     width: 280px;
     top: 70px;
   }
+  #nav {
+    padding-left: 30%;
+    width: 70%;
+
+  }
 }
 
 @media (max-width: 1279px) {
   .johnLarge {
     width: 265px;
     top: 75px;
+  }
+  #nav {
+    padding-left: 29%;
+    width: 71%;
   }
 }
 
@@ -279,6 +288,10 @@ footer {
     width: 250px;
     top: 80px;
   }
+  #nav {
+    padding-left: 32%;
+    width: 68%;
+  }
 }
 
 @media (max-width: 1036px) {
@@ -286,12 +299,20 @@ footer {
     width: 200px;
     top: 150px;
     }
+    #nav {
+      padding-left: 28%;
+      width: 72%;
+    }
 }
 
 @media (max-width: 800px) {
   .johnLarge {
     width: 200px;
     top: 150px;
+    }
+    #nav {
+      padding-left: 34%;
+      width: 66%;
     }
   .heroContainer {
     #title {
